# LAP-agent

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/agents/: deps.py  graph.py  state.py
backend/app/agents/nodes/: cartographer.py  conductor.py  documenter.py  prober.py  publisher.py  scout.py  synthesizer.py  verifier.py
backend/app/api/: deps.py
backend/app/api/v1/: router.py
backend/app/api/v1/routes/: approvals.py  health.py  knowledge.py  runs.py
backend/app/cache/: redis.py
backend/app/core/: config.py  lifespan.py  logging.py
backend/app/llm/: nebius.py
backend/app/repositories/: base.py  memory.py
backend/app/schemas/: __init__.py  approval.py  health.py  knowledge.py  run.py
backend/app/services/: knowledge_service.py  run_service.py
backend/tests/: conftest.py  test_health.py
docs/: ARCHITECTURE.md  PRD-learn-a-platform.md
frontend/: .dockerignore  .gitignore  Dockerfile  README.md  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
frontend/app/runs/: page.tsx
frontend/app/runs/[id]/: page.tsx
frontend/components/: ApprovalsPanel.tsx  CapabilityExplorer.tsx  Card.tsx  EventLog.tsx  HealthBadge.tsx  NavBar.tsx  NewRunForm.tsx  PageHeader.tsx  RunsTable.tsx  States.tsx  StatusChip.tsx  UiMapView.tsx
frontend/lib/: api.ts  format.ts  types.ts
